# copal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  test.yml
docs/: deployment.md  design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: ChatContainer.tsx  ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ResearchPhaseIndicator.test.tsx  ResearchPhaseIndicator.tsx  ThinkingDots.tsx  TokenGate.test.tsx  TokenGate.tsx
frontend/src/hooks/: useAuth.test.ts  useAuth.ts  useChat.test.ts  useChat.ts
frontend/src/utils/: api.test.ts  api.ts  export.test.ts  export.ts
src/: lib.rs  main.rs
src/agent/: any_agent.rs  builder.rs  chat_agent.rs  mcp.rs  mock_agent.rs  mod.rs  research_tool.rs  router_agent.rs  web_fetch.rs
src/cli/: mod.rs  repl.rs
src/collectors/: robots.rs  web.rs
src/llm/: rig_client.rs
src/session/: history.rs  mod.rs
src/web/: auth.rs  handlers.rs  mod.rs  router.rs  state.rs
