[package]
name = "copal"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:rustyline", "dep:termimad", "dep:crossterm"]

[dependencies]
# CLI (optional, gated behind "cli" feature)
rustyline = { version = "17.0", optional = true }

# Async runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing
scraper = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# LLM integration
rig-core = "0.28"

# Load .env file
dotenvy = "0.15"

# robots.txt parser
texting_robots = "0.2"

# PDF text extraction
pdf-extract = "0.7"

# Terminal markdown rendering (optional, gated behind "cli" feature)
termimad = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }

# Web search (using reqwest to call Tavily API directly)
